Spacing fixes

--- a/frontend/src/assets/sass/layout.scss
+++ b/frontend/src/assets/sass/layout.scss
@@ -203,6 +203,14 @@
   height: 32px;
 }
 
+div.modal-footer {
+  padding: 12px 12px 12px 0px;
+}
+
+button.modal-buttons {
+  margin-right: 8px !important;
+}
+
 .assign_officer_modal_profile_card {
   display: flex;
   flex-direction: row;
@@ -234,7 +242,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding: 8px;
+  padding: 7px 8px 9px 8px;
   gap: 8px;
   
   width: 56px;
@@ -256,7 +264,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  padding: 24px 24px 0px 24px;
+  padding: 14px 10px 10px 24px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
