--- a/frontend/src/assets/sass/misc.scss
+++ b/frontend/src/assets/sass/misc.scss
@@ -44,9 +44,9 @@
   display: inline-block;
   border-radius: 50%;
   vertical-align: middle;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
+  width: 35px;
+  height: 35px;
+  line-height: 35px;
   font-size: 16px;
   text-align: center;
   margin-right: 8px;
